traefik/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.santos.party`) # change this to your domain
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: santos-party-tls
